--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "reginaldbank"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "A DND Manager App"
+authors = ["MikdalDr, Neelzee"]
 license = ""
-repository = ""
+repository = "https://github.com/MikalDr/ReginaldBank"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,6 +16,8 @@ tauri-build = { version = "1.5", features = [] }
 tauri = { version = "1.5", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+once_cell = "1.19.0"
+tokio = { version = "1.35.1", features = ["full"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
